@@ -1,4 +1,5 @@
 2.19.1
+ - fix: "buyukurganci-2022" was not actually the default viscosity model
  - ref: remove distutils dependency
  - docs: add developer's section
 2.19.0
